Fix fonts on iOS

--- a/_sass/base/_code.scss
+++ b/_sass/base/_code.scss
@@ -5,11 +5,11 @@ figure {
 .highlight {
   margin-bottom: 1rem;
   padding: 1rem 1.25rem;
-  //background-color: #f5f5f5;
-  //border-radius: .15rem;
   background-color: #fafafd;
+  width: 100%;
+  overflow: auto;
   .language-java {
-    font-size: 60%;
+    font-size: 70% !important;
   }
   > pre {
     padding: 0;
@@ -18,7 +18,8 @@ figure {
   }
   .code pre {
     padding: 0 0.5em;
-    display: block; white-space: pre; overflow-x: auto; word-wrap: normal;
+    display: block;
+    white-space: pre;
   }
   .lineno {
     padding: 0 0.5em 0 0;
@@ -27,13 +28,14 @@ figure {
     white-space: pre;
   }
   .language-any {
-      display: block;
-      padding: 0 1.5rem;
+    display: block;
+    padding: 0 1.5rem;
   }
   border-bottom: 0.063em solid #dedede;
   border-top: 0.063em solid #dedede;
   font-family: $gistFontFamily;
 }
+
 .gist {
   .gist-file {
     font-family: $gistFontFamily;
@@ -61,15 +63,16 @@ figure {
     border-radius: 0;
   }
 }
+
 .gist-highlight {
   max-height: 20rem;
   overflow-y: scroll;
 }
 
-
 code, pre {
   font-family: $codeFontFamily;
 }
+
 code {
   padding: .15em .3em;
   font-size: 80%;
@@ -79,6 +82,7 @@ code {
   background-color: #f5f5f5;
   border-radius: .15em;
 }
+
 @media (max-width: 30em) {
   code {
     word-break: break-all;
@@ -92,11 +96,10 @@ pre {
   line-height: 1.4;
   white-space: pre-wrap;
   word-break: break-all;
-  word-wrap: break-word;
-}
-pre code {
-  padding: 0;
-  color: inherit;
-  font-size: 80%;
-  background-color: transparent;
+  code {
+    padding: 0;
+    color: inherit;
+    font-size: 80%;
+    background-color: transparent;
+  }
 }
